fixed little B, added markers for grid??

--- a/flea_market/public/index.html
+++ b/flea_market/public/index.html
@@ -41,5 +41,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="flea_market/src/components/Product/ProductCard.js"
+      <div class="productCard">
+      <div class="one">One</div>
+      <div class="two">Two</div>
+      <div class="three">Three</div>
+      <div class="four">Four</div>
+      <div class="five">Five</div>
+      <div class="six">Six</div>
+    
+    
   </body>
 </html>
