--- a/flea_market/public/index.html
+++ b/flea_market/public/index.html
@@ -41,8 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <link rel="stylesheet" type ="text/css" href="Products.css" >
-    test
+    <style>
+      background-color: rgb(226, 192, 148);
+    </style>
     
   </body>
 </html>
